--- a/html/components/component_variable.html
+++ b/html/components/component_variable.html
@@ -323,14 +323,14 @@
 				<li style="color:var(--surface-surface700);"><span>surface-surface700</span><i></i></li>
 				<li style="color:var(--surface-surface800);"><span>surface-surface800</span><i></i></li>
 				<li style="color:var(--surface-surface900);"><span>surface-surface900</span><i></i></li>
-				<li style="color:var(--typograpy-black);"><span>typograpy-black</span><i></i></li>
-				<li style="color:var(--typograpy-body);"><span>typograpy-body</span><i></i></li>
-				<li style="color:var(--typograpy-caption);"><span>typograpy-caption</span><i></i></li>
-				<li style="color:var(--typograpy-disabled);"><span>typograpy-disabled</span><i></i></li>
-				<li style="color:var(--typograpy-gray);"><span>typograpy-gray</span><i></i></li>
-				<li style="color:var(--typograpy-placeholder);"><span>typograpy-placeholder</span><i></i></li>
-				<li style="color:var(--typograpy-title);"><span>typograpy-title</span><i></i></li>
-				<li style="color:var(--typograpy-white);"><span>typograpy-white</span><i></i></li>
+				<li style="color:var(--typography-black);"><span>typography-black</span><i></i></li>
+				<li style="color:var(--typography-body);"><span>typography-body</span><i></i></li>
+				<li style="color:var(--typography-caption);"><span>typography-caption</span><i></i></li>
+				<li style="color:var(--typography-disabled);"><span>typography-disabled</span><i></i></li>
+				<li style="color:var(--typography-gray);"><span>typography-gray</span><i></i></li>
+				<li style="color:var(--typography-placeholder);"><span>typography-placeholder</span><i></i></li>
+				<li style="color:var(--typography-title);"><span>typography-title</span><i></i></li>
+				<li style="color:var(--typography-white);"><span>typography-white</span><i></i></li>
 			</ul>
 		</div>
 
