--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -11,6 +11,7 @@ div:where(.swal2-container) div:where(.swal2-actions) .btn-alert {flex:1;font-si
 div:where(.swal2-container) div:where(.swal2-actions) .btn-alert:not(:last-child) {border-right:1px solid var(--gray100);}
 
 div:where(.swal2-container) {z-index:calc(var(--header-zIndex) +  1001);padding:0;transition:background-color .3s;}
+div:where(.swal2-container).swal2-backdrop-show, div:where(.swal2-container).swal2-noanimation {background:var(--status-dimmed);}
 @keyframes swal2-show {
     0% {transform:scale(0.99)}
     45% {transform:scale(1.01)}
@@ -29,16 +30,21 @@ select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initi
 /* micromodal */
 .modal {font-family:inherit;}
 .micromodal-slide.is-open {position:relative;z-index:calc(var(--header-zIndex) +  1000);}
-.modal__container {padding:0;max-width:none;max-height:100%;border-radius:0;flex:1 1 100%;background-color:transparent;}
-.modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;}
-.modal__overlay {display:block;}
+.modal__container {padding:0;max-width:none;max-height:100%;flex:1 1 100%;background-color:var(--white-100);border-radius:20px 20px 0 0;display:flex;flex-direction:column;}
+.modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
+.modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);}
+.modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;}
+.modal__header .modal__close {position:absolute;right:0;top:50%;transform:translateY(-50%);width:56px;height:56px;display:flex;align-items:center;justify-content:center;}
+.modal__header .modal__close:before {content:'';flex:0 0 24px;width:24px;height:24px;background:url(../images/ico/ico_close.svg) center center / contain no-repeat;}
+
+.modal__overlay {display:block;background:var(--status-dimmed);}
 .micromodal-slide .modal__container, .micromodal-slide .modal__overlay {will-change:initial;}
 .micromodal-slide[aria-hidden="false"] .modal__container.modal__container__left {animation:mmslideLeftIn .3s cubic-bezier(0, 0, .2, 1)}
 .micromodal-slide[aria-hidden="true"] .modal__container.modal__container__left {animation:mmslideLeftOut .3s cubic-bezier(0, 0, .2, 1);}
 
 .micromodal-slide-bottom .modal__overlay {display:flex;align-items:flex-end;}
 .micromodal-slide-bottom .modal__container {overflow:none;}
-.micromodal-slide-bottom .modal__content {background-color:var(--white);padding:30px 16px 20px;border-radius:20px 20px 0 0;max-height:80vh;overflow-y:auto;}
+.micromodal-slide-bottom .modal__content {/* background-color:var(--white-100); *//* padding:30px 16px 20px; *//* border-radius:20px 20px 0 0; *//* max-height:80vh; *//* overflow-y:auto; */}
 
 .micromodal-slide-dropdown .modal__container {position:absolute;background-color:var(--white);padding:10px 24px;border-radius:12px;}
 
@@ -91,13 +97,6 @@ select.ql-ui {height:initial;appearance:auto;font-size:initial;font-weight:initi
 .jstree-work .jstree-anchor>.jstree-themeicon {display:none;}
 .jstree-work.jstree-folder .jstree-anchor>.jstree-themeicon {display:inline-block;background:url(../images/ico/ico-folder-16.svg) center center / 16px 16px no-repeat;}
 
-
-/* datepicker */
-.ui-widget-header {background-color:var(--white);}
-.ui-datepicker td span, .ui-datepicker td a {text-align:center;}
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {border-color:transparent;background-color:transparent;}
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {background-color:var(--red300);color:var(--white);}
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {background-color:#176CBB;color:var(--white);}
 
 
 /* toastr */
