--- a/assets/css/ui-style.css
+++ b/assets/css/ui-style.css
@@ -91,16 +91,16 @@ i.ico-add {-webkit-mask-image:url(../images/ico/ico_add.svg);mask-image:url(../i
 .title-large {font-size:18px;line-height:1.5;font-weight:700;color:var(--typography-title);}
 .title-medium {font-size:16px;line-height:1.5;font-weight:700;color:var(--typography-title);}
 .title-small {font-size:14px;line-height:1.5;font-weight:700;color:var(--typography-title);}
-.body-xlarge {font-size:18px;line-height:1.6;font-weight:400;color:var(--typograpy-body);}
-.body-large {font-size:16px;line-height:1.6;font-weight:400;color:var(--typograpy-body);}
-.body-medium {font-size:14px;line-height:1.6;font-weight:400;color:var(--typograpy-body);}
-.body-small {font-size:13px;line-height:1.6;font-weight:400;color:var(--typograpy-body);}
+.body-xlarge {font-size:18px;line-height:1.6;font-weight:400;color:var(--typography-body);}
+.body-large {font-size:16px;line-height:1.6;font-weight:400;color:var(--typography-body);}
+.body-medium {font-size:14px;line-height:1.6;font-weight:400;color:var(--typography-body);}
+.body-small {font-size:13px;line-height:1.6;font-weight:400;color:var(--typography-body);}
 
 /* form */ 
-input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size:16px;font-weight:700;color:var(--typograpy-black);border-radius:8px;border:1px solid var(--border-12);background:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);}
-input:not([type="checkbox"],[type="radio"],[type="file"])::placeholder {color:var(--typograpy-placeholder);font-weight:700;}
-input:not([type="checkbox"],[type="radio"],[type="file"])[readonly] {color:var(--typograpy-gray);border:1px solid var(--border-4);}
-input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(--typograpy-placeholder);border:1px solid var(--border-4);background-color:var(--status-disabled_bg);}
+input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size:16px;font-weight:700;color:var(--typography-black);border-radius:8px;border:1px solid var(--border-12);background:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);}
+input:not([type="checkbox"],[type="radio"],[type="file"])::placeholder {color:var(--typography-placeholder);font-weight:700;}
+input:not([type="checkbox"],[type="radio"],[type="file"])[readonly] {color:var(--typography-gray);border:1px solid var(--border-4);}
+input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(--typography-placeholder);border:1px solid var(--border-4);background-color:var(--status-disabled_bg);}
 input[type="file"]:not(.inp-file) {appearance:none;position:absolute;opacity:0;z-index:-100;width:0!important;height:0!important;padding:0!important;}
 input[type="file"]::-webkit-file-upload-button {display:none;}
 
@@ -133,22 +133,22 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .inp.inp-large label {}
 .inp.inp-large input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;cursor:inherit;flex:0 0 27px;width:27px;height:27px;background:url(../images/form/form-checkbox-large.svg) center center / 24px 24px no-repeat;}
 .inp.inp-large input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-large-checked.svg) center center / 24px 24px no-repeat;}
-.inp.inp-large .label-title {display:block;font-size:18px;line-height:1.5;font-weight:700;color:var(--typograpy-title);}
-.inp.inp-large .label-subtitle {display:block;font-size:13px;color:var(--typograpy-body);margin-top:8px;}
+.inp.inp-large .label-title {display:block;font-size:18px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.inp.inp-large .label-subtitle {display:block;font-size:13px;color:var(--typography-body);margin-top:8px;}
 
 .inp.inp-medium {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp.inp-medium label {}
 .inp.inp-medium input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-medium.svg) center center no-repeat;}
 .inp.inp-medium input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-medium-checked.svg) center center / contain no-repeat;}
-.inp.inp-medium .label-title {display:block;font-size:16px;line-height:1.5;color:var(--typograpy-gray);}
-.inp.inp-medium .label-subtitle {display:block;font-size:13px;color:var(--typograpy-body);margin-top:8px;}
+.inp.inp-medium .label-title {display:block;font-size:16px;line-height:1.5;color:var(--typography-gray);}
+.inp.inp-medium .label-subtitle {display:block;font-size:13px;color:var(--typography-body);margin-top:8px;}
 
 
 .inp.inp-small {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp.inp-small label {}
 .inp.inp-small input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-small.svg) center center no-repeat;}
 .inp.inp-small input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-small-checked.svg) center center / contain no-repeat;}
-.inp.inp-small .label-title {display:block;font-size:13px;line-height:1.6;color:var(--typograpy-body);margin:2px 0 1px;}
+.inp.inp-small .label-title {display:block;font-size:13px;line-height:1.6;color:var(--typography-body);margin:2px 0 1px;}
 .inp.inp-small .chevron-only {margin-top:2px;}
 
 .inp.inp-large input[type="radio"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-radio-large.svg) center center no-repeat;}
@@ -156,7 +156,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 .inp.inp-tab {display:flex;padding:2px;background:var(--surface-surface100);border-radius:8px;}
 .inp.inp-tab label {position:relative;flex:1;display:flex;align-items:center;justify-content:center;}
-.inp.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;text-align:center;padding:0 8px;font-size:16px;color:var(--typograpy-gray);line-height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
+.inp.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;text-align:center;padding:0 8px;font-size:16px;color:var(--typography-gray);line-height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
 .inp.inp-tab input[type="radio"]:before {content:attr(aria-label);}
 .inp.inp-tab input[type="radio"]:checked {background-color:var(--background-bg_white);}
 .inp.inp-tab input[type="radio"]:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background:var(--border-8);margin-top:-7px;}
@@ -196,8 +196,8 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 /* form */
 .form {flex:1;}
-.form .label {display:flex;align-items:center;font-size:14px;line-height:1;color:var(--typograpy-black);margin-bottom:8px;}
-.form .validate-text {font-size:13px;color:var(--typograpy-caption);margin-top:2px;}
+.form .label {display:flex;align-items:center;font-size:14px;line-height:1;color:var(--typography-black);margin-bottom:8px;}
+.form .validate-text {font-size:13px;color:var(--typography-caption);margin-top:2px;}
 .form .validate-text:empty:before {content:'\00a0';}
 .form-invalid .input-wrap input {border:1px solid var(--status-error);background-color:var(--background-bg_lightRed);}
 .form-invalid .validate-text {color:var(--status-error);}
@@ -229,23 +229,38 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .tab-content .tab-col:before {content:'';position:absolute;left:0;bottom:0;width:100%;height:1px;background-color:var(--border-8);}
 .tab-content .tab-col li {flex:1;}
 .tab-content .tab-col li button,
-.tab-content .tab-col li a {position:relative;display:flex;font-size:16px;line-height:50px;align-items:center;justify-content:center;color:var(--typograpy-gray);width:100%;padding:0 8px;white-space:nowrap;}
+.tab-content .tab-col li a {position:relative;display:flex;font-size:16px;line-height:50px;align-items:center;justify-content:center;color:var(--typography-gray);width:100%;padding:0 8px;white-space:nowrap;}
 .tab-content .tab-col li button:before,
 .tab-content .tab-col li a:before {content:'';position:absolute;left:8px;right:8px;bottom:0;height:3px;background:transparent;transition:background 0.3s ease;}
 .tab-content .tab-col li.tab-active button,
-.tab-content .tab-col li.tab-active a {color:var(--typograpy-title);font-weight:700;}
+.tab-content .tab-col li.tab-active a {color:var(--typography-title);font-weight:700;}
 .tab-content .tab-col li.tab-active button:before,
 .tab-content .tab-col li.tab-active a:before {background:var(--border-72);}
 
 .tab-content .tab-anchor {position:relative;display:flex;z-index:var(--tab-zIndex);gap:8px;}
 .tab-content .tab-anchor li {}
 .tab-content .tab-anchor li button,
-.tab-content .tab-anchor li a {position:relative;display:flex;font-size:14px;line-height:30px;align-items:center;justify-content:center;color:var(--typograpy-gray);background:var(--background-bg_disabled);padding:0 14px;white-space:nowrap;border-radius:30px;}
+.tab-content .tab-anchor li a {position:relative;display:flex;font-size:14px;line-height:30px;align-items:center;justify-content:center;color:var(--typography-gray);background:var(--background-bg_disabled);padding:0 14px;white-space:nowrap;border-radius:30px;}
 .tab-content .tab-anchor li.tab-active button,
 .tab-content .tab-anchor li.tab-active a {color:var(--white-100);background:var(--button-primary-enabled);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_3), 0px 3px 12px -1px var(--shadow-gray_3);}
 
 /* overflow-list */
 .overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;scroll-snap-type:x mandatory;gap:6px;}
+
+/* description */
+.description {font-size:16px;font-weight:500;color:var(--typography-gray);padding:4px 0;}
+.description:before {content:'';display:inline-block;vertical-align:text-top;width:20px;height:20px;margin-right:2px;
+    -webkit-mask-position:center center;
+    mask-position:center center;
+    -webkit-mask-size:20px 20px;
+    mask-size:20px 20px;
+    -webkit-mask-repeat:no-repeat;
+    mask-repeat:no-repeat;
+    background-color:var(--icon-gray_1);
+    -webkit-mask-image:url(../images/ico/ico_description.svg);
+    mask-image:url(../images/ico/ico_description.svg);
+}
+.description.info:before {background-color:var(--status-info);color:var(--status-info);}
 
 /* dropDown */
 .dropDown {position:relative;z-index:var(--dropdown-zIndex);}
@@ -271,17 +286,6 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .dropDown.has-title .target > ul {border:1px solid var(--graye6);background-color:var(--grayf5);padding:10px 0;}
 .dropDown.has-title .target > ul li > * {display:flex;padding:10px 20px;font-size:16px;font-weight:500;color:var(--black19);}
 .dropDown.has-title .target .nodata {margin:40px 0;}
-
-
-
-/* nodata */
-.nodata {display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;height:100%;font-size:16px;font-weight:700;}
-.nodata:before strong {margin-top:24px;}
-.nodata span {font-size:16px;color:#666;margin-top:14px;}
-
-/* message-wrap */
-.message-wrap {display:flex;align-items:center;gap:4px;font-size:14px;color:var(--gray300);}
-.message-wrap:before {content:'';flex:0 0 16px;width:16px;height:16px;background:url(../images/ico/ico-message.svg) center center / contain no-repeat;}
 
 
 /* pagination */
