--- a/assets/css/ui-content.css
+++ b/assets/css/ui-content.css
@@ -9,3 +9,10 @@
 .init-business-card {border-radius:8px;border: 1.5px dashed var(--deepblue-300);background: var(--background-bg_white);box-shadow: 0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:24px;}
 .init-business-card picture {margin-top:20px;align-items:center;justify-content:center;}
 .init-business-card p {text-align:center;}
+
+/* businesscard-list */
+.businesscard-list {}
+.businesscard-list .list-group-item {position:relative;display:flex;padding:24px;align-items:center;justify-content:space-between;gap:16px;}
+.businesscard-list .list-group-item:after {content:'';position:absolute;left:24px;right:24px;bottom:0;height:1px;background-color:var(--border-4);}
+.businesscard-list .list-group-item .handler {flex:0 0 24px;width:24px;height:24px;background:url(../images/ico/ico_sortable_handler.svg) center center / 24px 24px no-repeat;}
+.businesscard-list .list-group-item.sortable-chosen {background-color:var(--background-bg_gray);border-radius:4px;border: 1px solid var(--status-focused);opacity: 0.95;}
