--- a/html/components/component_variable.html
+++ b/html/components/component_variable.html
@@ -242,7 +242,7 @@
 				<li style="color:var(--background-bg_deepGray);"><span>background-bg_deepGray</span><i></i></li>
 				<li style="color:var(--background-bg_disabled);"><span>background-bg_disabled</span><i></i></li>
 				<li style="color:var(--background-bg_gray);"><span>background-bg_gray</span><i></i></li>
-				<li style="color:var(--background-bg_lgithGray);"><span>background-bg_lgithGray</span><i></i></li>
+				<li style="color:var(--background-bg_lightGray);"><span>background-bg_lightGray</span><i></i></li>
 				<li style="color:var(--background-bg_lightBlue);"><span>background-bg_lightBlue</span><i></i></li>
 				<li style="color:var(--background-bg_lightCyan);"><span>background-bg_lightCyan</span><i></i></li>
 				<li style="color:var(--background-bg_lightPink);"><span>background-bg_lightPink</span><i></i></li>
@@ -312,6 +312,8 @@
 				<li style="color:var(--status-info);"><span>status-info</span><i></i></li>
 				<li style="color:var(--status-success);"><span>status-success</span><i></i></li>
 				<li style="color:var(--status-focused);"><span>status-focused</span><i></i></li>
+				<li style="color:var(--status-disabled_bg);"><span>status-disabled_bg</span><i></i></li>
+				<li style="color:var(--status-disabled_font);"><span>status-disabled_font</span><i></i></li>
 				<li style="color:var(--surface-surface);"><span>surface-surface</span><i></i></li>
 				<li style="color:var(--surface-surface0);"><span>surface-surface0</span><i></i></li>
 				<li style="color:var(--surface-surface100);"><span>surface-surface100</span><i></i></li>
