--- a/assets/css/ui-style.css
+++ b/assets/css/ui-style.css
@@ -31,6 +31,8 @@
 .btn-ghost[aria-disabled="true"] {background:var(--button-ghost-disabled);color:var(--button-ghost-onDisabled);}
 
 .btn-ghost-white {color:var(--button-ghostw-onEnabled);border:1px solid var(--button-ghostw-border);}
+.btn-ghost-white:not([aria-disabled="true"]):active {background: var(--button-ghostw-pressed);}
+
 .btn-noborder {color: var(--button-textBtn-Enabled);}
 
 .btn-round {border-radius:50px;}
@@ -156,7 +158,7 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 .inp.inp-tab {display:flex;padding:2px;background:var(--surface-surface100);border-radius:8px;}
 .inp.inp-tab label {position:relative;flex:1;display:flex;align-items:center;justify-content:center;}
-.inp.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;text-align:center;padding:0 8px;font-size:16px;color:var(--typography-gray);line-height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
+.inp.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;text-align:center;padding:0 8px;font-size:16px;color:var(--typography-gray);line-height:44px;height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
 .inp.inp-tab input[type="radio"]:before {content:attr(aria-label);}
 .inp.inp-tab input[type="radio"]:checked {background-color:var(--background-bg_white);}
 .inp.inp-tab input[type="radio"]:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background:var(--border-8);margin-top:-7px;}
@@ -261,6 +263,32 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
     mask-image:url(../images/ico/ico_description.svg);
 }
 .description.info:before {background-color:var(--status-info);color:var(--status-info);}
+
+/* tags */
+.tags {display:inline-flex;vertical-align:top;}
+.tags-small {font-size:13px;font-weight:500;line-height:1;padding:4px 8px;border-radius:4px;}
+.tags-medium {font-size:14px;font-weight:500;line-height:1;padding:8px 12px;border-radius:8px;}
+
+.tags-lightBlue {color:var(--blue-600);;background: var(--background-bg_lightBlue)}
+.tags-lightGray {color: var(--typography-gray);background: var(--background-bg_ligthGray)}
+.tags-lightCyan {color: var(--cyan-600);background: var(--background-bg_lightCyan)}
+.tags-lightViolet {color: var(--violet-600);background: var(--background-bg_lightViolet);}
+.tags-lightPurple {color: var(--purple-600);background: var(--background-bg_lightPurple)}
+.tags-lightRed {color: var(--red-600);background: var(--background-bg_lightRed)}
+.tags-lightYellow {color: var(--yellow-800);background: var(--background-bg_lightYellow)}
+.tags-lightPink {color: var(--pink-600);background: var(--background-bg_lightPink)}
+.tags-disabled_bg {color: var(--status-disabled_font);background: var(--status-disabled_bg);}
+
+.tags-black-80 {color: var(--typography-white);background: var(--black-80);}
+.tags-white {color: var(--typography-gray);background: var(--background-bg_white);}
+.tags-E6E2F2 {color: var(--violet-600);background: #E6E2F2;}
+.tags-blue {color: var(--typography-white);background: var(--background-bg_blue);}
+.tags-cyan {color: var(--typography-white);background: var(--background-bg_cyan);}
+.tags-purple {color: var(--typography-white);background: var(--background-bg_purple);}
+.tags-violet {color: var(--typography-white);background: var(--background-bg_violet);}
+.tags-red {color: var(--typography-white);background: var(--background-bg_red);}
+.tags-yellow {color: var(--typography-white);background: var(--background-bg_yellow);}
+.tags-pink {color: var(--typography-white);background: var(--background-bg_pink);}
 
 /* dropDown */
 .dropDown {position:relative;z-index:var(--dropdown-zIndex);}
